# itmo

./: .gitmodules  README.md
ai/mod1/: lab1.pl  lab2.owl  lab3.py  sparql
csa/: README.md  doom.md  end.md  flake.nix  gtaonline.md  hello.md  libc.md  main.c  problem.md  sscanf.md  str.md
csa/lab1/: main.c
db/kursach/: create.sql  drop.sql  drop_create_insert.fish  index.sql  insert.sql
db/lab1/: Create.sql  Info.drawio  Insert.sql  drop_create_insert.fish  select_bad_spaceships.sql
db/lab2/: Create.sql  Drop.sql  Insert.sql
db/lab3/: 1.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  README.md
db/lab4/: 1.sql  2.sql  d+
dbms/lab1/: proc.sql  var.md
dbms/lab2/: init.sh  pg_hba.conf  postgresql.conf  user.sh  var.md
dbms/lab3/: backup_script.sh  delete.sql  insert.sql  pg_hba.conf  postgresql.conf  restore.sh  restore_on_main.sh  restore_wal.sh  var.md
os/lab1/: Cargo.toml  README.md  flake.nix
os/lab1/src/: main.rs  util.rs
os/lab1/src/output/: mod.rs  plain.rs  plot.rs
os/lab1/src/prof/: mod.rs  perf.rs  proccpu.rs  procio.rs  procmaps.rs  procmem.rs  procnet.rs
programming/ProgLab2/: Main.java  README.md
programming/ProgLab3/: Main.java  README.md
programming/ProgLab4/: README.md  StoryTeller.java
programming/ProgLab5/: Main.java  README.md
programming/ProgLab6/: Data.json  README.md  pom.xml
programming/ProgLab7/: README.md  database.txt  pom.xml
programming/ProgLab8/: README.md  createTableScripts  pom.xml
soa/lab1/: main.yaml  slave.yaml
soa/lab2front/: README.md  angular.json  package.json  pnpm-lock.yaml
(+606 files in other folders)
