[package]
name = "lab1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["user", "fs"] }
plotters = "0.3.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
